--- a/assets/scss/imports/core/_variables.scss
+++ b/assets/scss/imports/core/_variables.scss
@@ -11,7 +11,8 @@ $main-bg-cl: #fff;
 $main-text-cl: #000;
 $black-cl: #000;
 $white-cl: #fff;
-$gray-cl: #d3d3d3;
+$line-cl: #262626;
+$img-cl: #A1A4AB;
 
 :root {
   --app-height: 100vh;
